# rUBot_limo_ws

./: .gitignore  README.md
Documentation/: 01_LIMO_HW&SW_repository_Setup.md  01_Limo_Setup.md  01_Setup.md  02_Limo_Bringup.md  02_Limo_Navigation.md  02_Limo_control.md  04_Limo_Vision  links_limo.docx
devel/: .catkin  _setup_util.py  local_setup.sh
devel/include/limo_base/: LimoStatus.h
devel/lib/limo_base/: limo_base_node
devel/lib/limo_gazebo/: dummy_cmd_vel
devel/lib/pkgconfig/: limo_control.pc  limo_gazebo.pc  limo_navigation.pc  limo_viz.pc
devel/share/limo_base/cmake/: limo_base-msg-paths.cmake
devel/share/limo_control/cmake/: limo_controlConfig.cmake
devel/share/limo_gazebo/cmake/: limo_gazeboConfig.cmake
devel/share/limo_navigation/cmake/: limo_navigationConfig.cmake
devel/share/limo_viz/cmake/: limo_vizConfig.cmake
devel/share/roseus/ros/limo_base/: manifest.l
src/limo/limo_control/: README.md
src/limo/limo_control/config/: localization.yaml  twist_mux.yaml
src/limo/limo_navigation/launch/: limo_gmapping.launch  limo_navigation_amcl_ackerman.launch  limo_rtabmap.launch
src/limo/limo_navigation/params/move_base/: costmap_common_params.yaml
src/limo_desktop/: README.md
src/limo_desktop/limo_desktop/: CMakeLists.txt  README.md
src/limo_desktop/limo_viz/: CMakeLists.txt  package.xml
src/limo_desktop/limo_viz/launch/: view_ackerman_model.launch  view_four_diff_model.launch  view_navigation_gmapping.launch  view_navigation_rtabmap.launch
src/limo_desktop/limo_viz/rviz/: model.rviz
src/limo_sim/: README.md
src/limo_sim/limo_control/: CMakeLists.txt  package.xml
src/limo_sim/limo_control/launch/: control.launch
src/limo_sim/limo_control_custom/: CMakeLists.txt  package.xml
src/limo_sim/limo_control_custom/launch/: limo_wall_follower.launch
src/limo_sim/limo_control_custom/src/: limo_wall_follower.py
src/limo_sim/limo_gazebo/: package.xml
src/limo_sim/limo_gazebo/config/: limo_mecanum_control.yaml
src/limo_sim/limo_gazebo/launch/: apartment.launch  limo_ackerman.launch  limo_four_diff.launch  limo_four_diff2.launch  limo_mecanum.launch
src/limo_sim/limo_gazebo/meshes/: Floor.dae  Floor.stl  Structure.dae
src/limo_sim/limo_gazebo/urdf/: apartment.urdf.xacro
src/limo_sim/limo_gazebo/worlds/: empty.world
src/limo_sim/limo_navigation/: CMakeLists.txt  README.md  package.xml
src/limo_sim/limo_navigation/launch/: limo_move_base_ackerman.launch  limo_move_base_diff.launch  limo_navigation_amcl_diff.launch  limo_navigation_rtabmap_diff.launch
src/limo_sim/limo_navigation/maps/: apartment.pgm  map.pgm
src/limo_sim/limo_navigation/params/move_base/: global_costmap_params.yaml  teb_local_planner_params.yaml  trajectory_planner_params.yaml
src/limo_sim/limo_viz/: README.md
src/limo_sim/limo_viz/launch/: view_ackerman_model.launch  view_four_diff_model.launch  view_robot.launch
src/limo_sim/limo_viz/rviz/: gmapping.rviz  robot.rviz  rtabmap.rviz
src/limo_sim/rubot_limo_description/: CMakeLists.txt  README.md  package.xml
src/limo_sim/rubot_limo_description/urdf/: limo_ackerman.gazebo  limo_ackerman.xacro  limo_four_diff.gazebo  limo_four_diff.xacro  limo_mecanum.gazebo  limo_mecanum.urdf  limo_mecanum.xacro  limo_steering_hinge.xacro  limo_xacro.xacro
src/limo_simulator/: README.md
src/limo_simulator/limo_gazebo/: CMakeLists.txt  README.md
src/limo_simulator/limo_gazebo/config/: limo_ackerman_control.yaml
src/limo_simulator/limo_gazebo/launch/: limo_four_diff.launch
src/limo_simulator/limo_gazebo/meshes/: Structure.stl
src/limo_simulator/limo_gazebo/src/: dummy_cmd_vel.cpp
src/limo_simulator/limo_gazebo/urdf/: decorations.urdf.xacro  floor.urdf.xacro
src/limo_simulator/limo_simulator/: CMakeLists.txt  README.md  package.xml
