<?xml version="1.0"?>
<package format="2">
  <name>limo_viz</name>
  <version>0.0.0</version>
  <description>The limo_viz package</description>

  <maintainer email="support@agilex.ai">agiley</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>limo_description</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <test_depend>roslaunch</test_depend>
</package>
