<?xml version="1.0"?>
<package format="2">
  <name>limo_control</name>
  <version>0.0.0</version>
  <description>The limo_control package</description>

  <maintainer email="support@agilex.ai">agiley</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
 
  <exec_depend>interactive_marker_twist_server</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>

  <test_depend>roslaunch</test_depend>
</package>
